# iot-edge

./: CMakeLists.txt
bindings/dotnet/dotnet-binding/Microsoft.Azure.IoT.Gateway/: Message.cs
bindings/dotnetcore/dotnet-core-binding/: dotnet-core-binding.sln
bindings/dotnetcore/dotnet-core-binding/Microsoft.Azure.Devices.Gateway/: Message.cs
bindings/dotnetcore/dotnet-core-binding/Microsoft.Azure.Devices.Gateway.Tests/: Microsoft.Azure.Devices.Gateway.Tests.csproj
core/: CMakeLists.txt
core/inc/module_loaders/: dotnet_core_loader.h
samples/dotnet_core_managed_gateway/: dotnet_core_managed_gateway.csproj  dotnet_core_managed_gateway_lin.json  dotnet_core_managed_gateway_win.json
samples/dotnet_core_managed_gateway/Properties/: launchSettings.json
samples/dotnet_core_module_sample/: CMakeLists.txt
samples/dotnet_core_module_sample/modules/HelloWorldModule/: DotNetHelloWorldModule.cs  HelloWorldModule.csproj
tools/: build.sh  build_dotnet_core.cmd  build_dotnet_core.sh  change_dotnet_core_version.ps1  manage_module_projects.cmd
